--- a/index.html
+++ b/index.html
@@ -102,6 +102,34 @@
               </div>
           </section>
     </header>
+    <main>
+        <!-- Categories start -->
+        <div class="container overflow-hidden text-center mt-5">
+            <div class="row gy-2">
+              <!-- single-catagory -->
+              <div class="col-lg-4 col-md-6 col-sm-12">
+                <div class="p-3 border bg-primary d-flex align-items-center ps-5">
+                    <h1 class="text-white pe-5">Watch</h1>
+                <img src="images/categories/watch.png" alt="" srcset="">
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-6 col-sm-12">
+                <div class="p-3 border bg-warning d-flex align-items-center ps-5">
+                    <h1 class="text-white pe-5">Bags</h1>
+                <img src="images/categories/bag.png" alt="" srcset="">
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-6 col-sm-12">
+                <div class="p-3 border bg-success d-flex align-items-center ps-5">
+                    <h1 class="text-white pe-5">Watch</h1>
+                <img src="images/categories/shoes.png" alt="" srcset="">
+                </div>
+              </div>
+              </div>
+            </div>
+          </div>
+        <!-- Categories end -->
+    </main>
     <!----------------------- 
         Bootstrap JS Link
     ------------------------->
