--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!------------------- 
+       Font awesome kit
+    --------------------->
+    <script src="https://kit.fontawesome.com/01f83f690d.js" crossorigin="anonymous"></script>
+
     <!------------------------- 
         Bootstrap CSS Link
     --------------------------->
@@ -109,19 +114,19 @@
               <!-- single-catagory -->
               <div class="col-lg-4 col-md-6 col-sm-12">
                 <div class="p-3 border bg-primary d-flex align-items-center ps-5">
-                    <h1 class="text-white pe-5">Watch</h1>
+                    <h1 class="text-white">Watch</h1>
                 <img src="images/categories/watch.png" alt="" srcset="">
                 </div>
               </div>
               <div class="col-lg-4 col-md-6 col-sm-12">
                 <div class="p-3 border bg-warning d-flex align-items-center ps-5">
-                    <h1 class="text-white pe-5">Bags</h1>
+                    <h1 class="text-white">Bags</h1>
                 <img src="images/categories/bag.png" alt="" srcset="">
                 </div>
               </div>
               <div class="col-lg-4 col-md-6 col-sm-12">
                 <div class="p-3 border bg-success d-flex align-items-center ps-5">
-                    <h1 class="text-white pe-5">Watch</h1>
+                    <h1 class="text-white">Shoes</h1>
                 <img src="images/categories/shoes.png" alt="" srcset="">
                 </div>
               </div>
@@ -129,6 +134,47 @@
             </div>
           </div>
         <!-- Categories end -->
+
+        <!-- Card section start -->
+        <section class="container mt-5">
+            <h2>Shoes</h2>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                  <div class="card border border-0 shadow-lg">
+                    <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Supply 350</h5>
+                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <h1>$120</h1>
+                    </div>
+                    <div class="btn btn-danger w-50 ms-3">Buy Now <i class="fa-solid fa-angles-right"></i></div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card border border-0 shadow-lg">
+                    <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <h1>$320</h1>
+                    </div>
+                    <div class="btn btn-danger w-50 ms-3">Buy Now <i class="fa-solid fa-angles-right"></i></div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card border border-0 shadow-lg">
+                    <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                      <h1 class="text-danger">$350</h1>
+                    </div>
+                    <div class="btn btn-danger w-50 ms-3">Buy Now <i class="fa-solid fa-angles-right"></i></div>
+                  </div>
+                </div>
+              </div>
+        </section>
+        <!-- Card section end -->
     </main>
     <!----------------------- 
         Bootstrap JS Link
