--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <header class="container">
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-expand-lg fixed-top bg-light">
             <div class="container">
               <a class="navbar-brand" href="#"><img src="images/logo.png" alt=""></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,13 +30,13 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Shoes</a>
+                    <a class="nav-link" href="#shoes">Shoes</a>
                   </li>
                   <li>
-                    <a href="#" class="nav-link">Bagpack</a>
+                    <a href="#bagpacks" class="nav-link">Bagpacks</a>
                   </li>
                   <li>
-                    <a href="#" class="nav-link">Subscribe</a>
+                    <a href="#subscribe" class="nav-link">Subscribe</a>
                   </li>
                 </ul>
                 
@@ -136,7 +136,7 @@
         <!-- Categories end -->
 
         <!-- Card section start -->
-        <section class="container mt-5">
+        <section class="container mt-5" id="shoes">
             <h2>Shoes</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
@@ -175,7 +175,67 @@
               </div>
         </section>
         <!-- Card section end -->
+        
+        <!-- Bag menu section start -->
+            <section class="container mt-5" id="bagpacks">
+                <h2>Bagpacks</h2>
+                <div class="row row-cols-1 row-cols-md-3 g-4">
+                    <div class="col">
+                      <div class="card">
+                        <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Red Laltu Bag</h5>
+                          <h1>$120</h1>
+                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer</p>
+                        </div>
+                        <div class="btn btn-success w-50 ms-3">Buy Now <i class="fa-solid fa-angles-right"></i></div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card">
+                        <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Blue Niltu Bag</h5>
+                          <h1>$120</h1>
+                          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="btn btn-success w-50 ms-3">Buy Now <i class="fa-solid fa-angles-right"></i></div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card">
+                        <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Black kaltu Bag</h5>
+                          <h1>$120</h1>
+                          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                        </div>
+                        <div class="btn btn-success w-50 ms-3">Buy Now <i class="fa-solid fa-angles-right"></i></div>
+                      </div>
+                    </div>
+                  </div>
+            </section>
+        <!-- Bag menu section end -->
+        <!-- Subscribe section start -->
+        <section style="height: 300px;" class="container mt-lg-5 d-flex flex-column align-items-center justify-content-center bg-black" id="subscribe">
+          <div>
+            <h2 class="text-white">LET'S STAY IN TOUCH</h2>
+          <p class="text-white">Get updates on sales, specials and more</p>
+          <form>
+            <div class="mb-3">
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </div>
+          </form>
+        </section>
+        <!-- Subscribe section end -->
     </main>
+    <!-- Footer section start -->
+      <footer class="mt-5 text-center">
+        <p style="font-size: .95em;">©2022. Panda Commerce. All rights reserved. Hasibul Hasan.</p>
+      </footer>
+    <!-- Footer section end -->
     <!----------------------- 
         Bootstrap JS Link
     ------------------------->
