--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     --------------------------->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
 
+      <!-- Custom CSS -->
+      <link rel="stylesheet" href="main.css">
     <title>Panda</title>
 </head>
 <body>
@@ -47,7 +49,7 @@
           <section class="mt-5">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                  <div class="carousel-item active bg-info border rounded p-5">
+                  <div class="carousel-item active bg-info slider border rounded p-5">
                     <div class="row">
                         <div class="col-lg-7 d-flex
                         align-items-center">
@@ -63,7 +65,7 @@
                         </div>
                     </div>
                   </div>
-                  <div class="carousel-item active bg-info border rounded p-5">
+                  <div class="carousel-item active bg-info slider border rounded p-5">
                     <div class="row">
                         <div class="col-lg-7 d-flex
                         align-items-center">
@@ -79,7 +81,7 @@
                         </div>
                     </div>
                   </div>
-                  <div class="carousel-item active bg-info border rounded p-5">
+                  <div class="carousel-item active bg-info slider border rounded p-5">
                     <div class="row">
                         <div class="col-lg-7 d-flex
                         align-items-center">
@@ -115,19 +117,19 @@
               <div class="col-lg-4 col-md-6 col-sm-12">
                 <div class="p-3 border bg-primary d-flex align-items-center ps-5">
                     <h1 class="text-white">Watch</h1>
-                <img src="images/categories/watch.png" alt="" srcset="">
+                <img src="images/categories/watch.png" alt="" srcset="" class="img-category">
                 </div>
               </div>
               <div class="col-lg-4 col-md-6 col-sm-12">
                 <div class="p-3 border bg-warning d-flex align-items-center ps-5">
                     <h1 class="text-white">Bags</h1>
-                <img src="images/categories/bag.png" alt="" srcset="">
+                <img src="images/categories/bag.png" alt="" srcset="" class="img-category">
                 </div>
               </div>
               <div class="col-lg-4 col-md-6 col-sm-12">
                 <div class="p-3 border bg-success d-flex align-items-center ps-5">
                     <h1 class="text-white">Shoes</h1>
-                <img src="images/categories/shoes.png" alt="" srcset="">
+                <img src="images/categories/shoes.png" alt="" srcset="" class="img-category">
                 </div>
               </div>
               </div>
